--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "php": ">= 5.4",
     "nette/application": "~2.4",
     "nette/di": "~2.4",
-    "latte/latte": "^2.4"
+    "latte/latte": "^2.4",
+    "tracy/tracy": "^2.4"
   },
   "require-dev": {
     "nette/tester": "~1.6"
